My slution to the homework final version, TeX file

--- a/Courses/2015-20/Probability/homework/H2/tex/solution.tex
+++ b/Courses/2015-20/Probability/homework/H2/tex/solution.tex
@@ -65,7 +65,7 @@ La distribución acumulada de una variable aleatoria $X \sim Tri(a,\ c,\ b)$ es:
 
 $$\mathbb{P}(X < 15.6) - \mathbb{P}(X < 8.5) = 0.9689 - 0.0200 = 0.948991$$
 
-La probabilidad de que un balón esté en óptimas condiciones según su aire almacenado es: $0.948991$.
+La probabilidad de que un balón esté en óptimas condiciones según su aire almacenado es: $0.948991$. La probabilidad de que un balón esté defectuoso es $0.051009$.
 
 \item ¿Cuál es la probabilidad de que se decida iniciar la producción de los nuevos
 balones en la Etapa 1, sin pasar a la Etapa 2?\\
