--- a/Courses/2015-20/Probability/homework/H4/tex/sections/punto2.tex
+++ b/Courses/2015-20/Probability/homework/H4/tex/sections/punto2.tex
@@ -5,11 +5,89 @@
 
 \item \textbf{(3 puntos)} Calcule el sesgo para cada uno de los estimadores planteados. ¿Cuáles de estos estimadores son insesgados?
 
+Para que los estimadores planteados sean insesgados, debe ser cierto que $\mathbb{E}(\hat{\mu}_{1,2,3}) = \mu$.
+
+Para cada uno de los $\hat{\mu}_i \forall i \in {1,2,3}$, se verifica la propiedad:
+
+$$\hat{\mu}_1 \Rightarrow \mathbb{E}(\hat{\mu}_1) = \bar{X} = \mathbb{E} \left( \frac{1}{n} \times \sum_{i = 1}^{n} X_{i} \right) =  \frac{1}{n} \times \mathbb{E} \left(  \sum_{i = 1}^{n} X_{i} \right) = \frac{1}{n} \times (n \times \mu) = \mu$$
+
+$$\hat{\mu}_2 \Rightarrow \mathbb{E}(\hat{\mu}_2) = \mathbb{E} \left( \frac{X_1 + 2X_2 + 3X_3}{6}\right) = \mathbb{E} \left( \frac{1}{6} \times \sum_{i = 1}^{3} iX_i\right) =  \frac{1}{6} \times \sum_{i = 1}^{3} iX_i $$
+$$= \frac{\mu}{6} \times \sum_{i = 1}^{3} i  = \frac{\mu}{6} \times (1 + 2 + 3) = \frac{\mu}{6} \times 6 = \mu$$
+
+$$\hat{\mu}_3 \Rightarrow \mathbb{E}(\hat{\mu}_3) = \mathbb{E} \left( \frac{X_1 + X_6 + X_{10}}{4}\right) = \frac{1}{4} \times (\mathbb{E}(X_{1}) + \mathbb{E}(X_{6}) + \mathbb{E}(X_{10})) = \frac{3 \times \mu}{4}$$
+
+Como se puede ver los dos primeros estimadores son insesgados, mientras que el último es sesgado. El sesgo de cada estimador, se muestra en las ultimas partes de las igualdades.
+
 \item \textbf{(3 puntos)} Calcule el error cuadrático medio de los tres estimadores.
+
+$$\text{ECM}(\mu_{1,2,3}) = \text{Var}(\mu_{1,2,3})) + \text{Sesgo}^2(\mu_{1,2,3}))$$
+
+$$ \text{Var}(\mu_{1,2,3})) \Rightarrow $$
+
+$$ \text{Var}(\mu_{1}) =  \text{Var}(\bar{X}) = \text{Var} \left( \frac{1}{n} \times \sum_{i =  1}^{n} X_{i} \right) = \frac{1}{n^2} \times    \sum_{i =  1}^{n} \text{Var} \left( X_{i}\right) = \frac{\sigma ^2}{n}$$
+$$\Rightarrow \text{ECM}(\mu_{1}) = \frac{\sigma ^2}{n}$$
+
+$$ \text{Var}(\mu_{2}) =  \text{Var}(\bar{X}) =  \text{Var} \left(\sum_{i =  1}^{3} i \times X_{i} \right) = \frac{1}{36} \times  \left(\sum_{i =  1}^{3} i \times \text{Var}(X_{i}) \right)$$
+$$=  \frac{\sigma ^2}{36} \times  \left(\sum_{i =  1}^{3} i ^2 \right) = \frac{\sigma ^2}{36} \times  (9 + 4 + 1) = \frac{7}{18} \times \sigma ^2 $$
+$$\Rightarrow \text{ECM}(\mu_{2}) =  \frac{7}{18} \times \sigma ^2$$
+
+$$ \text{Var}(\mu_{3}) =  \text{Var}(\frac{X_1 + X_6 + X_{10}}{4}) = \frac{1}{16} \times  \left(\sum_{i \in \{ 1, 6, 10\}} \text{Var}(X_{i}) \right) = \frac{3\times \sigma ^2}{16}$$
+$$\Rightarrow \text{ECM}(\mu_{3}) = \frac{3\times \sigma ^2}{16} + \left(\frac{\mu} {4}\right) ^2$$
 
 \item \textbf{(3 puntos)} Para cada uno de los estimadores, evalúe si es consistente o si no lo es.
 
+Para cada uno de los $\hat{\mu}_i \forall i \in {1,2,3}$, se verifican las propiedades:
+
+$$\lim_{n\to\infty} \mathbb{E}(\mu_i) = \mu \wedge \lim_{n\to\infty} \text{Var}(\mu_i) = 0$$
+
+$\text{Para } \mu_1:$
+
+\begin{equation}
+\begin{split}
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \lim_{n\to\infty} \mathbb{E}(\bar{X}) \\
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \lim_{n\to\infty} \mu \\
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \mu \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \lim_{n\to\infty} \text{Var}(\bar{X}) \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \lim_{n\to\infty} \frac{\sigma ^2}{n} \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = 0
+\end{split}
+\end{equation}
+
+Por la verificación de las propiedades, se sabe que $\mu_1$ es consistente.
+
+$\text{Para } \mu_2:$
+
+\begin{equation}
+\begin{split}
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \lim_{n\to\infty} \mathbb{E}\left( \frac{X_1 + 2X_2 + 3X_3}{6}\right) \\
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \lim_{n\to\infty} \mu \\
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \mu \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \lim_{n\to\infty} \text{Var}\left( \frac{X_1 + 2X_2 + 3X_3}{6}\right) \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \lim_{n\to\infty}\frac{7 \times \sigma ^2}{18} \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \frac{7 \times \sigma ^2}{18} \neq 0
+\end{split}
+\end{equation}
+
+Por la verificación de las propiedades, se sabe que $\mu_2$ no es consistente.
+
+$\text{Para } \mu_3:$
+
+\begin{equation}
+\begin{split}
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \lim_{n\to\infty} \mathbb{E}\left( \frac{X_1 + X_6 + X_{10}}{4}\right) \\
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \lim_{n\to\infty} \frac{3 \times \mu}{4} \\
+\lim_{n\to\infty} \mathbb{E}(\mu_i) = \frac{3 \times \mu}{4} \neq \mu \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \lim_{n\to\infty} \text{Var}\left( \frac{X_1 + X_6 + X_{10}}{4}\right) \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \lim_{n\to\infty}\frac{7 \times \sigma ^2}{18} \\
+\lim_{n\to\infty} \text{Var}(\mu_1) = \frac{7 \times \sigma ^2}{18} \neq 0
+\end{split}
+\end{equation}
+
+Por la verificación de las propiedades, se sabe que $\mu_3$ no es consistente.
+
 \item \textbf{(3 puntos)} De acuerdo a las conclusiones obtenidas en los literales anteriores, ¿cuál de los tres estimadores sería el más adecuado? Justifique su respuesta.
+
+Es necesario un estimador insesgado y consistente, además, debe minimizar el error cuadrático medio. Considerando los anteriores resultados, el mejor estimador es $\hat{\mu}_1$.
 
 \end{enumerate}
 \end{document}
